# Website

./: .gitignore  AGENTS.md  CNAME  README  README.md  astro.config.mjs  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: biome.yml  build.yml  ci.yml  deploy.yml  pages.yml
public/challenges/crypto-aes-cbc-bitflip/: hint.txt  server.py
public/challenges/crypto-aes-ecb-penguin/: encrypt.py  hint.txt
public/challenges/crypto-caesar-base64/: hint.txt  secret.txt
public/challenges/crypto-diffie-hellman/: exchange.py  output.txt
public/challenges/crypto-elliptic-curve/: challenge.py  output.txt
public/challenges/crypto-hash-length-extension/: hint.txt  known_hash.txt  server.py
public/challenges/crypto-lattice-knapsack/: encrypt.py  hint.txt  output.txt
public/challenges/crypto-padding-oracle/: ciphertext.hex  hint.txt  oracle.py
public/challenges/crypto-rsa-beginner/: encrypt.py  output.txt
public/challenges/crypto-rsa-common-modulus/: encrypt.py  output.txt
public/challenges/crypto-rsa-coppersmith/: encrypt.py  output.txt
public/challenges/crypto-vigenere/: ciphertext.txt  encrypt.py  hint.txt
public/challenges/rev-rust-binary/: Cargo.toml  flag.txt  main.rs
scripts/: build-cjk-atlas.mjs  build-cjk-atlas.py  import-projects.mjs  import-writeups.mjs  subset-fonts.mjs
src/components/: Header.astro
src/config/: appearance.ts  effects.ts  site.ts  volumes.ts
src/content/: config.ts
src/layouts/: Layout.astro
src/pages/: about.astro  docs.astro  index.astro
src/styles/: global.css
(+615 files in other folders)
