[package]
name = "rust-crackme"
version = "0.1.0"
edition = "2021"
description = "CTF Challenge: Reverse engineering a Rust binary"

# Build with: cargo build --release
# The release binary will be heavily optimized and harder to reverse.
# Debug builds retain more symbol information.

[profile.release]
opt-level = 3
strip = true          # Strip symbols for harder reversing
lto = true            # Link-time optimization merges code
panic = "abort"       # Simpler panic handling in binary
